upadted minimal index

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bita Digital Hub – Free Online Tools & AI Utilities</title>
 
-  <meta name="description" content="Free online tools for file conversion, password generation, URL shortener, CSV cleaning, QR generator and more. Fast, clean, no login required." />
+  <meta name="description" content="Free online tools for productivity: URL shortener, password generator, CSV cleaner, file converter, QR generator and more. Fast, simple, private." />
 
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/home.css" />
@@ -24,15 +24,21 @@
 </script>
 
 
-<!-- ================= HERO ================= -->
-<section class="hero">
+<!-- ================= HERO (Minimal SaaS) ================= -->
+<section class="hero minimal-hero">
   <div class="container">
-    <h1>Powerful Free Tools for Your Daily Work</h1>
-    <p>Instant, private, free utilities for converting files, generating passwords, creating QR codes, cleaning CSVs, and more — all in one place.</p>
 
-    <a href="/pages/tools/tools.html" class="btn primary">Explore All Tools</a>
+    <h1 class="hero-title">Free Online Tools for Work & Creativity</h1>
 
-    <img src="/assets/images/online-biz.jpg" alt="Tools illustration" class="hero-image">
+    <p class="hero-sub">
+      Simple, fast, privacy-friendly utilities built to help you work smarter — not harder.
+    </p>
+
+    <a href="/pages/tools/tools.html" class="btn primary hero-btn">Explore Tools</a>
+
+    <!-- Clean lightweight SVG Hero -->
+    <img src="/assets/illustrations/hero-tools-ai.svg" alt="AI Tools Illustration" class="hero-illustration"/>
+
   </div>
 </section>
 
@@ -50,7 +56,7 @@
         <img src="/assets/icons/link-icon.svg" alt="URL Shortener">
         <div class="content">
           <h3>URL Shortener</h3>
-          <p>Create clean, fast, trackable links instantly.</p>
+          <p>Clean, short, fast links for sharing anywhere.</p>
         </div>
       </a>
 
@@ -60,7 +66,7 @@
         <img src="/assets/icons/file-icon.svg" alt="File converter">
         <div class="content">
           <h3>File Converter</h3>
-          <p>Convert between common formats in seconds.</p>
+          <p>Convert between images, documents, and formats instantly.</p>
         </div>
       </a>
 
@@ -70,7 +76,7 @@
         <img src="/assets/icons/password-icon.svg" alt="Password Generator">
         <div class="content">
           <h3>Password Generator</h3>
-          <p>Secure random passwords for personal & business use.</p>
+          <p>Strong secure passwords for personal and business use.</p>
         </div>
       </a>
 
@@ -80,17 +86,17 @@
         <img src="/assets/icons/csv-icon.svg" alt="CSV Cleaner">
         <div class="content">
           <h3>CSV Cleaner</h3>
-          <p>Remove duplicates, fix encoding, normalize data fast.</p>
+          <p>Fix, clean, and normalize CSV files in seconds.</p>
         </div>
       </a>
 
       <!-- QR Generator -->
       <a href="/pages/tools/generators/qr-generator/index.html" class="card">
         <div class="card-accent-orange"></div>
-        <img src="/assets/icons/zip-icon.svg" alt="QR Generator">
+        <img src="/assets/icons/ai-tool-icon.svg" alt="QR Generator">
         <div class="content">
           <h3>QR Generator</h3>
-          <p>Create QR codes for links, business cards & more.</p>
+          <p>Create QR codes for menus, business pages, and more.</p>
         </div>
       </a>
 
@@ -100,10 +106,10 @@
 
 
 <!-- ================= CTA ================= -->
-<section class="section">
+<section class="section cta-section">
   <div class="container text-center">
     <h2>Everything you need — in one clean workspace</h2>
-    <p>Fast, simple, private. No login. No tracking. Built for creators, marketers, small businesses, students, and developers.</p>
+    <p>Fast, simple, private. No login required. Built for creators, students, marketers, and developers.</p>
     <a href="/pages/tools/tools.html" class="btn outline">Browse All Tools</a>
   </div>
 </section>
