upadted tools and index

--- a/pages/tools/tools.html
+++ b/pages/tools/tools.html
@@ -2,96 +2,120 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Free Online Tools | Bita Digital Hub</title>
-  <meta name="description"
-        content="Use free online tools by Bita Digital Hub: URL shortener, QR generator, password generator, CSV cleaner, file converter, appointment builder and more." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Free Online Tools | Bita Digital Hub</title>
+
+  <meta name="description" content="Free online tools for QR generation, file conversion, password generation, CSV cleaning, URL shortener, and more. No login required." />
 
   <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/cards.css" />
   <link rel="stylesheet" href="/css/tools.css" />
-</head>
-<body class="tools-page">
-
-  <!-- HEADER -->
-  <div id="header-placeholder"></div>
-  <script>
-    fetch("/components/header.html")
-      .then(res => res.text())
-      .then(html => document.getElementById("header-placeholder").innerHTML = html);
-  </script>
-
-  <main class="section">
-    <h1 class="tool-title">Free Online Tools</h1>
-    <p class="tool-description">
-      Lightweight browser-based tools to speed up your daily work:
-      clean CSV files, generate secure passwords, create QR codes,
-      shorten links, convert images, and schedule appointments.
-    </p>
-
-    <!-- Generators -->
-    <h2 class="section-title" style="margin-top:2.5rem;">Generators</h2>
-    <div class="tools-grid">
-      <a class="tool-card" href="/pages/tools/generators/url-shortener/">
-        <div class="tool-icon"><span>🔗</span></div>
-        <h3>URL Shortener</h3>
-        <p>Shorten long links into clean, shareable URLs.</p>
-      </a>
-
-      <a class="tool-card" href="/pages/tools/generators/qr-generator/">
-        <div class="tool-icon"><span>📱</span></div>
-        <h3>QR Code Generator</h3>
-        <p>Create QR codes for links, profiles, and campaigns.</p>
-      </a>
-
-      <a class="tool-card" href="/pages/tools/generators/password-generator/">
-        <div class="tool-icon"><span>🔐</span></div>
-        <h3>Password Generator</h3>
-        <p>Generate strong, random passwords in one click.</p>
-      </a>
-    </div>
-
-    <!-- Converters -->
-    <h2 class="section-title" style="margin-top:3rem;">Converters</h2>
-    <div class="tools-grid">
-      <a class="tool-card" href="/pages/tools/converters/file-converter/">
-        <div class="tool-icon"><span>🖼️</span></div>
-        <h3>Image Converter</h3>
-        <p>Convert images between PNG, JPG, and WebP formats.</p>
-      </a>
-
-      <!-- جای Image Resizer برای بعد -->
-      <a class="tool-card" href="/pages/tools/utilities/csv-cleaner/">
-        <div class="tool-icon"><span>🧹</span></div>
-        <h3>CSV Cleaner</h3>
-        <p>Clean up CSV exports: trim spaces and remove empty rows.</p>
-      </a>
-    </div>
-
-    <!-- Utilities -->
-    <h2 class="section-title" style="margin-top:3rem;">Utilities</h2>
-    <div class="tools-grid">
-      <a class="tool-card" href="/pages/tools/appointments/">
-        <div class="tool-icon"><span>📅</span></div>
-        <h3>Appointment Builder</h3>
-        <p>Create calendar-ready events (ICS + Google Calendar link).</p>
-      </a>
-
-      <a class="tool-card" href="/pages/tools/utilities/zip-unzip/">
-        <div class="tool-icon"><span>🗂️</span></div>
-        <h3>Zip / Unzip</h3>
-        <p>Compress and extract small archives directly in your browser.</p>
-      </a>
-    </div>
-  </main>
-
-  <!-- FOOTER -->
-  <div id="footer-placeholder"></div>
-  <script>
-    fetch("/components/footer.html")
-      .then(res => res.text())
-      .then(html => document.getElementById("footer-placeholder").innerHTML = html);
-  </script>
-
   <script src="/js/core/script.js" defer></script>
+</head>
+
+<body>
+
+<!-- HEADER -->
+<div id="header-placeholder"></div>
+<script>
+  fetch("/components/header.html")
+    .then(res => res.text())
+    .then(html => document.getElementById("header-placeholder").innerHTML = html);
+</script>
+
+<section class="section tools-hero">
+  <div class="container">
+    <h1 class="page-title">Free Online Tools</h1>
+    <p class="page-subtitle">
+      Lightweight browser tools to simplify everyday tasks:
+      shorten URLs, create QR codes, generate secure passwords,
+      clean CSV files, convert images and documents, and more.
+    </p>
+  </div>
+</section>
+
+
+<!-- =============================
+      TOOLS GRID
+============================= -->
+<section class="section">
+  <div class="container">
+    <div class="card-grid">
+
+      <!-- URL Shortener -->
+      <a href="/pages/tools/url/index.html" class="card tool-card">
+        <div class="tool-icon"><span>🔗</span></div>
+        <div class="content">
+          <h3>URL Shortener</h3>
+          <p>Create clean, short links instantly.</p>
+        </div>
+      </a>
+
+      <!-- QR Code Generator -->
+      <a href="/pages/tools/generators/qr-generator/index.html" class="card tool-card">
+        <div class="tool-icon"><span>📱</span></div>
+        <div class="content">
+          <h3>QR Code Generator</h3>
+          <p>Create QR codes for business pages and menus.</p>
+        </div>
+      </a>
+
+      <!-- Password Generator -->
+      <a href="/pages/tools/generators/password-generator/index.html" class="card tool-card">
+        <div class="tool-icon"><span>🔐</span></div>
+        <div class="content">
+          <h3>Password Generator</h3>
+          <p>Generate strong, secure random passwords.</p>
+        </div>
+      </a>
+
+      <!-- CSV Cleaner -->
+      <a href="/pages/tools/utilities/csv-cleaner/index.html" class="card tool-card">
+        <div class="tool-icon"><span>🧹</span></div>
+        <div class="content">
+          <h3>CSV Cleaner</h3>
+          <p>Remove duplicates, fix encoding, clean large CSV files.</p>
+        </div>
+      </a>
+
+      <!-- File Converter -->
+      <a href="/pages/tools/converters/file-converter/index.html" class="card tool-card">
+        <div class="tool-icon"><span>📁</span></div>
+        <div class="content">
+          <h3>File Converter</h3>
+          <p>Convert images, PDF, documents, audio and more.</p>
+        </div>
+      </a>
+
+      <!-- Zip / Unzip -->
+      <a href="/pages/tools/utilities/zip-unzip/index.html" class="card tool-card">
+        <div class="tool-icon"><span>🗂️</span></div>
+        <div class="content">
+          <h3>Zip / Unzip</h3>
+          <p>Compress and extract files online.</p>
+        </div>
+      </a>
+
+      <!-- Appointment Scheduler -->
+      <a href="/pages/tools/appointments/index.html" class="card tool-card">
+        <div class="tool-icon"><span>📅</span></div>
+        <div class="content">
+          <h3>Appointment Maker</h3>
+          <p>Create simple appointments without login.</p>
+        </div>
+      </a>
+
+    </div>
+  </div>
+</section>
+
+<!-- FOOTER -->
+<div id="footer-placeholder"></div>
+<script>
+  fetch("/components/footer.html")
+    .then(res => res.text())
+    .then(html => document.getElementById("footer-placeholder").innerHTML = html);
+</script>
+
 </body>
 </html>
