--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bita Digital Hub – Free Online Tools & AI Utilities</title>
 
-  <meta name="description" content="Free online tools for productivity: URL shortener, password generator, CSV cleaner, file converter, QR generator and more. Fast, simple, private." />
+  <meta name="description" content="Free online tools for file conversion, password generation, URL shortener, CSV cleaning, QR generator and more. Fast, clean, no login required." />
 
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/home.css" />
@@ -15,32 +15,59 @@
 
 <body>
 
-<!-- ================= HEADER ================= -->
-<div id="header-placeholder"></div>
-<script>
-  fetch("/components/header.html")
-    .then(res => res.text())
-    .then(html => document.getElementById("header-placeholder").innerHTML = html);
-</script>
+<!-- ============================
+     HEADER (Minimal Slide Navbar)
+============================ -->
+<header class="main-header">
+  <div class="nav-inner">
+
+    <!-- Brand -->
+    <a href="/" class="brand-link">
+      <span class="brand-emoji">⚡</span>
+      <span class="brand-name">Bita Digital Hub</span>
+    </a>
+
+    <!-- Desktop Nav -->
+    <nav class="nav-links">
+      <a href="/pages/blog/blog.html">Blog</a>
+      <a href="/pages/tools/tools.html">Tools</a>
+      <a href="/pages/product/product.html">Services</a>
+      <a href="/pages/about/about.html">About</a>
+      <a href="/index.html">Home</a>
+      <a href="/pages/contact/contact.html">Contact</a>
+    </nav>
+
+    <!-- Mobile Toggle -->
+    <button class="menu-toggle" aria-label="Toggle Menu">
+      <i data-lucide="menu"></i>
+    </button>
+  </div>
+
+  <!-- Mobile Drawer -->
+  <nav class="mobile-nav" id="mobileNav">
+    <a href="/pages/blog/blog.html">Blog</a>
+    <a href="/pages/tools/tools.html">Tools</a>
+    <a href="/pages/product/product.html">Services</a>
+    <a href="/pages/about/about.html">About</a>
+    <a href="/index.html">Home</a>
+    <a href="/pages/contact/contact.html">Contact</a>
+  </nav>
+</header>
 
 
-<!-- ================= HERO (Minimal SaaS) ================= -->
-<section class="hero minimal-hero">
+
+<!-- ================= HERO ================= -->
+<section class="hero">
   <div class="container">
+    <h1>Powerful Free Tools for Your Daily Work</h1>
+    <p>Instant, private, free utilities for converting files, generating passwords, creating QR codes, cleaning CSVs, and more — all in one place.</p>
 
-    <h1 class="hero-title">Free Online Tools for Work & Creativity</h1>
+    <a href="/pages/tools/tools.html" class="btn primary">Explore All Tools</a>
 
-    <p class="hero-sub">
-      Simple, fast, privacy-friendly utilities built to help you work smarter — not harder.
-    </p>
-
-    <a href="/pages/tools/tools.html" class="btn primary hero-btn">Explore Tools</a>
-
-    <!-- Clean lightweight SVG Hero -->
-    <img src="/assets/illustrations/hero-tools-ai.svg" alt="AI Tools Illustration" class="hero-illustration"/>
-
+    <img src="/assets/images/online-biz.jpg" alt="Tools illustration" class="hero-image">
   </div>
 </section>
+
 
 
 <!-- ================= FEATURED TOOLS ================= -->
@@ -52,18 +79,16 @@
       
       <!-- URL Shortener -->
       <a href="/pages/tools/url/index.html" class="card">
-        <div class="card-accent-blue"></div>
-        <img src="/assets/icons/link-icon.svg" alt="URL Shortener">
+        <div class="tool-icon"><span>🔗</span></div>
         <div class="content">
           <h3>URL Shortener</h3>
-          <p>Clean, short, fast links for sharing anywhere.</p>
+          <p>Create clean, fast, trackable links instantly.</p>
         </div>
       </a>
 
       <!-- File Converter -->
       <a href="/pages/tools/converters/file-converter/index.html" class="card">
-        <div class="card-accent-purple"></div>
-        <img src="/assets/icons/file-icon.svg" alt="File converter">
+        <div class="tool-icon"><span>📁</span></div>
         <div class="content">
           <h3>File Converter</h3>
           <p>Convert between images, documents, and formats instantly.</p>
@@ -72,28 +97,25 @@
 
       <!-- Password Generator -->
       <a href="/pages/tools/generators/password-generator/index.html" class="card">
-        <div class="card-accent-green"></div>
-        <img src="/assets/icons/password-icon.svg" alt="Password Generator">
+        <div class="tool-icon"><span>🔐</span></div>
         <div class="content">
           <h3>Password Generator</h3>
-          <p>Strong secure passwords for personal and business use.</p>
+          <p>Secure random passwords for personal & business use.</p>
         </div>
       </a>
 
       <!-- CSV Cleaner -->
       <a href="/pages/tools/utilities/csv-cleaner/index.html" class="card">
-        <div class="card-accent-yellow"></div>
-        <img src="/assets/icons/csv-icon.svg" alt="CSV Cleaner">
+        <div class="tool-icon"><span>🧹</span></div>
         <div class="content">
           <h3>CSV Cleaner</h3>
-          <p>Fix, clean, and normalize CSV files in seconds.</p>
+          <p>Remove duplicates, fix encoding, normalize data fast.</p>
         </div>
       </a>
 
       <!-- QR Generator -->
       <a href="/pages/tools/generators/qr-generator/index.html" class="card">
-        <div class="card-accent-orange"></div>
-        <img src="/assets/icons/ai-tool-icon.svg" alt="QR Generator">
+        <div class="tool-icon"><span>📱</span></div>
         <div class="content">
           <h3>QR Generator</h3>
           <p>Create QR codes for menus, business pages, and more.</p>
@@ -105,14 +127,16 @@
 </section>
 
 
+
 <!-- ================= CTA ================= -->
-<section class="section cta-section">
+<section class="section">
   <div class="container text-center">
     <h2>Everything you need — in one clean workspace</h2>
-    <p>Fast, simple, private. No login required. Built for creators, students, marketers, and developers.</p>
+    <p>Fast, simple, private. No login. No tracking. Built for creators, marketers, small businesses, students, and developers.</p>
     <a href="/pages/tools/tools.html" class="btn outline">Browse All Tools</a>
   </div>
 </section>
+
 
 
 <!-- ================= FOOTER ================= -->
