--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -2,56 +2,170 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact | Bita Digital Hub</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/css/style.css" />
   <link rel="stylesheet" href="/css/components.css" />
-  <script src="/js/core/script.js" defer></script>
+  <link rel="stylesheet" href="/css/responsive.css" />
+
+  <style>
+    body {
+      background: #f8fafc;
+      padding-top: 120px;
+      font-family: "Poppins", sans-serif;
+    }
+
+    .contact-container {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 2rem 1.5rem;
+      text-align: center;
+    }
+
+    .contact-container h1 {
+      font-size: 2.4rem;
+      font-weight: 800;
+      margin-bottom: 0.5rem;
+      color: var(--primary);
+    }
+
+    .contact-container p {
+      max-width: 650px;
+      color: var(--text-soft);
+      margin: 0 auto 2.5rem;
+      font-size: 1.1rem;
+      line-height: 1.65;
+    }
+
+    /* FORM CARD */
+    .contact-card {
+      background: #ffffff;
+      padding: 2.5rem;
+      border-radius: 16px;
+      box-shadow: var(--shadow-sm);
+      border: 1px solid var(--border-light);
+      max-width: 700px;
+      margin: 0 auto;
+      text-align: left;
+    }
+
+    .form-group {
+      margin-bottom: 1.4rem;
+    }
+
+    label {
+      display: block;
+      font-weight: 600;
+      margin-bottom: 0.4rem;
+      color: #0f172a;
+    }
+
+    input, textarea {
+      width: 100%;
+      padding: 0.9rem 1rem;
+      border-radius: 10px;
+      border: 1px solid var(--border-light);
+      background: #f9fafb;
+      font-size: 1rem;
+      transition: .2s ease;
+    }
+
+    input:focus, textarea:focus {
+      outline: none;
+      border-color: var(--primary);
+      background: #fff;
+      box-shadow: 0 0 0 2px rgba(99, 102, 241, 0.15);
+    }
+
+    textarea {
+      height: 160px;
+      resize: vertical;
+    }
+
+    /* Button */
+    .contact-btn {
+      width: 100%;
+      background: var(--primary);
+      color: #fff;
+      border: none;
+      padding: 1rem;
+      font-size: 1.1rem;
+      border-radius: 12px;
+      cursor: pointer;
+      margin-top: 1rem;
+      font-weight: 600;
+      transition: .25s ease;
+    }
+
+    .contact-btn:hover {
+      background: var(--primary-light);
+      transform: translateY(-2px);
+      box-shadow: var(--shadow-lg);
+    }
+
+    /* Responsive */
+    @media (max-width: 480px) {
+      .contact-card {
+        padding: 1.8rem;
+      }
+      h1 {
+        font-size: 2rem;
+      }
+    }
+  </style>
 </head>
 
-<body class="tools-page">
+<body>
 
+<!-- HEADER -->
 <div id="header-placeholder"></div>
 <script>
   fetch("/components/header.html")
     .then(r => r.text())
-    .then(html => document.getElementById("header-placeholder").innerHTML = html);
+    .then(html => (document.getElementById("header-placeholder").innerHTML = html));
 </script>
 
-<section class="section text-center">
-  <div class="container">
-    <h1 class="tool-title">Contact</h1>
-    <p class="tool-description">Reach out for collaborations, support or business inquiries.</p>
+<div class="contact-container">
+
+  <h1>Contact Us</h1>
+  <p>
+    Have a question, a suggestion, or need help with one of the tools?
+    Send a message and we’ll get back to you as soon as possible.
+  </p>
+
+  <!-- FORM CARD -->
+  <div class="contact-card">
+    <form action="#" method="POST">
+      
+      <div class="form-group">
+        <label for="name">Your Name</label>
+        <input id="name" type="text" placeholder="Enter your name" required />
+      </div>
+
+      <div class="form-group">
+        <label for="email">Email Address</label>
+        <input id="email" type="email" placeholder="your@email.com" required />
+      </div>
+
+      <div class="form-group">
+        <label for="message">Message</label>
+        <textarea id="message" placeholder="Write your message..." required></textarea>
+      </div>
+
+      <button class="contact-btn">Send Message</button>
+
+    </form>
   </div>
-</section>
 
-<section class="section">
-  <div class="container">
+</div>
 
-    <div class="tool-wrapper" style="max-width:680px; margin:auto;">
-      <form class="contact-form">
-        <label class="tool-label">Your Name</label>
-        <input class="tool-input" type="text">
-
-        <label class="tool-label">Email</label>
-        <input class="tool-input" type="email">
-
-        <label class="tool-label">Message</label>
-        <textarea class="tool-input" rows="6"></textarea>
-
-        <button class="tool-btn">Send Message</button>
-      </form>
-    </div>
-
-  </div>
-</section>
-
+<!-- FOOTER -->
 <div id="footer-placeholder"></div>
 <script>
   fetch("/components/footer.html")
     .then(r => r.text())
-    .then(html => document.getElementById("footer-placeholder").innerHTML = html);
+    .then(html => (document.getElementById("footer-placeholder").innerHTML = html));
 </script>
 
 </body>
