added new seo tool3

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
     <div class="hero-text">
       <h1 class="hero-title">
-        Start and Grow Your Digital Presence — With Smart Tools and Simple Guides
+        Start and Grow Your Digital Presence
+         With Smart Tools and Simple Guides
       </h1>
 
       <p class="hero-sub">
@@ -100,13 +101,37 @@
   <div class="container text-center">
   
     <h2>Your Online Toolkit — Simple, Fast, Free</h2>
-    <p>
+    <h3>
       Bitadigitalhub gives creators, small businesses, students, and beginners the tools 
       and guidance they need to build online with confidence. No login, no tracking, 
       just clean and efficient tools designed to save you time and help you grow.
-    </p>
+    </h3>
 
     <a href="/pages/tools/tools.html" class="btn outline">Explore All Tools</a>
+  </div>
+</section>
+
+
+<!-- ============================
+     FROM THE BLOG
+============================ -->
+<section class="home-blog-section">
+  <h2>From the Blog</h2>
+
+  <div class="home-blog-list">
+
+    <a href="/pages/blog/getting-started-affiliate-marketing.html" class="home-blog-item">
+      Getting Started with Affiliate Marketing
+    </a>
+
+    <a href="/pages/blog/best-free-tools.html" class="home-blog-item">
+      Best Free Tools for Your Website
+    </a>
+
+    <a href="/pages/blog/how-to-write-blog-post.html" class="home-blog-item">
+      How to Write an Effective Blog Post
+    </a>
+
   </div>
 </section>
 
